fix whitespace issue in link embedded editor

--- a/app/styles/ember-rdfa-editor/_c-link.scss
+++ b/app/styles/ember-rdfa-editor/_c-link.scss
@@ -21,7 +21,7 @@
 .say-link {
   [contenteditable] {
     outline: none;
-    white-space: pre-wrap;
+    white-space: break-spaces;
     word-break: break-all;
     word-wrap: break-word;
     cursor: text;
